--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,16 @@
         <div class="container">
             <div class="row">
                 <h1>Gulp template</h1>
+                <svg class="icon images/#icon-001-shopping-cart">
+                    <use xlink:href="#icon-001-shopping-cart"></use>
+                </svg>
+                  
             </div>
         </div>
 
         <script src="./js/libs.min.js"></script>
         <script src="./js/tether.min.js"></script>
         <script src="./js/bootstrap.min.js"></script>
+        <script src="./js/common.js"></script>
     </body>
 </html>
