поправил сборку svg-спрайта

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
         <div class="container">
             <div class="row">
                 <h1>Gulp template</h1>
-                <svg class="icon images/#icon-001-shopping-cart">
-                    <use xlink:href="#icon-001-shopping-cart"></use>
+                <svg class="icon images/#icon-003-money-1">
+                    <use xlink:href="#icon-003-money-1"></use>
                 </svg>
                   
             </div>
